# algebra_old_bak

./: .gitignore  README.md  algebra.cabal  stack.yaml
src/: Algebra.hs  Main.hs
src/Algebra/Data/: AbelianGroup.hs  Algebra.hs  Group.hs
